# project-cbsobral

./: Makefile  README.md  pyproject.toml  renv.R
data/: berlin_hexagons.parquet  hex_osm_features.csv  panel_weekly.parquet
src/: 1_hexagons.py  2_features.py  3_panel.py  4_ascm.R  5a_plot_results.py  5b_plot_placebo.py  5c_plot_donor_map.py  5d_table_cov.py  _plot_style.py
