[project]
name = "berlin-scm"
version = "0.1.0"
description = "SCM analysis of cycling intervention"
authors = [{name = "Carol Sobral"}]
requires-python = ">=3.10"
readme = "README.md"

# Core dependencies
dependencies = [
    "geopandas>=0.14.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "contextily>=1.5.0",
    "shapely>=2.0.0",
    "pyarrow>=15.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = []

